[tool.poetry]
name = "chaos-app"
version = "0.1.0"
description = ""
authors = ["monacomfort.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.3"
prometheus-flask-exporter = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"